--- a/ads.html
+++ b/ads.html
@@ -4,10 +4,14 @@
 <meta charset="UTF-8">
 <title>ADS - IFSP - Pirituba</title>
 <script src="js/disabling.js"></script>
+ <link href='css/style.css' rel="stylesheet" type="text/css">
+ <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
 
-<header id="cabecalho"> <!-- Indica o cabeçalho do nosso documento-->
+<header id="cabecalho"> 
   <nav>
     <object width="100%" height="200px" data="menu.html"></object>
   </nav> 
@@ -21,9 +25,11 @@
   <br>
   O curso de Análise e Desenvolvimento de Sistemas do câmpus São Paulo Pirituba tem como objetivo capacitar o egresso a atuar na área de Tecnologia de Informação (TI) em atividades como análise, projeto, desenvolvimento, gerenciamento e implantação de sistemas de informação computacionais. Essa capacitação é pautada pela valorização da prática e competências técnicas, tanto em análise quanto em desenvolvimento, e pela atualização diante da realidade tecnológica, de modo que o profissional seja um mediador competente entre o desenvolvimento tecnológico e a sociedade em que se insere.
 </main>
-
+   <div class="my-div" id="mydiv"></div>
 <footer>     
-  <object width="100%" height="200px" data="rodape.html"></object>
+  <object width="100%" height="200px" data="rodape.html">
+    <script src="js/ads.js" type="text/babel"></script>
+  </object>
 </footer>
 
 
